examples/test/testpolicy14265.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14265
  namespace: namespace308
spec:
  podSelector:
    matchLabels:
      key1: value23
      key0: value19
      key18: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value10
          key1: value16
      podSelector:
        matchLabels:
          key30: value3
